@@ -1,3 +1,7 @@
+2003-06-25  Keisuke Nishida  <knishida@netlab.jp>
+
+	* termio.c (cob_accept): Do not use readline.
+
 2003-06-19  Keisuke Nishida  <knishida@netlab.jp>
 
 	* common.c, common.h (cob_check_odo): New function.
